lyrics overflow corrected

--- a/react-app/src/components/LyricsModal/LyricsModal.css
+++ b/react-app/src/components/LyricsModal/LyricsModal.css
@@ -1,3 +1,5 @@
 .lyrics-modal-container {
 margin: 2rem;
+max-height: 80vh;
+overflow: scroll;
 }
